fix(scss): adds a utility class for setting z-indexes to our base value
THIN-12499

--- a/scss/os/_utils.scss
+++ b/scss/os/_utils.scss
@@ -402,3 +402,9 @@ $somesizes: map-merge((
     }
   }
 }
+
+
+// --------------------------------- Z-Index Utilities --------------------------------- //
+.u-zindex-base {
+  z-index: $u-zindex-base;
+}
